Closed Bug 1597442 Opened 5 years ago Closed 4 years ago

Fix uses of nsJSContext::MaybeRunNextCollectorSlice in dom/base/nsJSEnvironment.cpp

Categories

(Core :: DOM: Navigation, defect, P3)

defect

Tracking

()

RESOLVED FIXED
mozilla76
Fission Milestone M6
Tracking Status
firefox76 --- fixed

People

(Reporter: djvj, Assigned: tetsuharu)

References

(Blocks 1 open bug)

Details

(Whiteboard: [rm-docshell-tree-item:simple])

Attachments

(1 file)

In file dom/base/nsJSEnvironment.cpp

Uses DocShell tree to check if argument DocShell is the same-type root for its tree. Internals not used.

Change to using BrowsingContext.

Kannan says replacing nsIDocShellTreeItem calls should block enabling Fission in Nightly (M6).

Fission Milestone: --- → M6
Priority: -- → P3
Assignee: nobody → tetsuharu.ohzeki
Status: NEW → ASSIGNED

There's a r+ patch which didn't land and no activity in this bug for 2 weeks.
:tetsuharu, could you have a look please?
For more information, please visit auto_nag documentation.

Flags: needinfo?(tetsuharu.ohzeki)

Olli, May I land this?
I heard that your work might make this patch unnecessary.

Flags: needinfo?(tetsuharu.ohzeki) → needinfo?(bugs)

Hmm, what work?
As far as I see, this could land.

Flags: needinfo?(bugs)

Aha, thank you!

Pushed by tetsuharu.ohzeki@gmail.com:
https://hg.mozilla.org/integration/autoland/rev/f066f0e696e3
Remove the usage of nsIDocShellTreeItem from nsJSContext::MaybeRunNextCollectorSlice(). r=smaug
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla76
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: