Bug 1597442 - Remove the usage of nsIDocShellTreeItem from nsJSContext::MaybeRunNextCollectorSlice(). r=smaug

Differential Revision: https://phabricator.services.mozilla.com/D63609

--HG--
extra : moz-landing-system : lando